# DOMEngine

./: .gitignore  CMakeLists.txt  README.md  VM.md
include/: colors.h  engine.h  interpreter.h  node.h  parser.h  repl.h  script.h  shell.h  style.h  tree.h  util.h  vm.h
src/: interpreter.cpp  main.cpp  node.cpp  parser.cpp  repl.cpp  script.cpp  shell.cpp  tree.cpp  util.cpp  vm.cpp
